src/test/deca/syntax/valid/include.deca
// Description :
// Vérifier l'include;
//
// Resultats :
// ok

#include"Math.decah"
{
}
